--- a/ui/package.json
+++ b/ui/package.json
@@ -34,7 +34,8 @@
     "vite": "^5.3.1"
   },
   "dependencies": {
-    "cookie-universal": "^2.2.2"
+    "cookie-universal": "^2.2.2",
+    "svelte-material-ui": "^7.0.0"
   },
   "husky": {
     "hooks": {
