--- a/ui/package.json
+++ b/ui/package.json
@@ -26,6 +26,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.2",
+    "qrcode": "^1.5.4",
     "sass-embedded": "^1.77.8",
     "svelte": "^4.2.18",
     "svelte-check": "^3.8.1",
